tests/NormalTests/paczka1/small_fuzzy/46599642.err
Error in line 2: ptbj8DmT S916 1,2
Error in line 9: h733 S341 85,6
